--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
   <style name="AppTheme.Lock.Theme" parent="Lock.Theme">
     <item name="Auth0.Title.Icon">@style/AppTheme.Lock.Theme.Title.Icon</item>
     <item name="Auth0.Title.Text">@style/AppTheme.Lock.Theme.Title.Text</item>
-    <item name="Auth0.Background">#39babd</item>
+    <item name="Auth0.Background">#141414</item>
     <item name="Auth0.PrimaryButtonStyle">@style/AppTheme.Lock.Theme.PrimaryButton</item>
     <item name="Auth0.SecondaryButtonStyle">@style/AppTheme.Lock.Theme.SecondaryButton</item>
     <item name="Auth0.CredentialBox">@style/AppTheme.Lock.Theme.CredentialBox</item>
@@ -18,22 +18,22 @@
     <item name="Auth0.CredentialField.Password">@style/AppTheme.Lock.Theme.CredentialField.Password</item>
     <item name="Auth0.CredentialField.Username">@style/AppTheme.Lock.Theme.CredentialField.Username</item>
     <item name="Auth0.Message">@style/AppTheme.Lock.Theme.Message</item>
-    <item name="Auth0.Separator.Color">#ffffff</item>
+    <item name="Auth0.Separator.Color">#ece4ce</item>
   </style>
 
   <style name="AppTheme.Lock.Theme.Title.Icon" parent="Lock.Theme.Title.Icon">
-    <item name="android:src">@mipmap/ic_pepperoni</item>
+    <item name="android:src">@mipmap/ic_spac_logo</item>
   </style>
 
   <style name="AppTheme.Lock.Theme.Title.Text" parent="Lock.Theme.Title.Text">
-    <item name="android:textColor">#ffffff</item>
+    <item name="android:textColor">#d29941</item>
   </style>
 
   <style name="AppTheme.Lock.Theme.PrimaryButton" parent="Widget.AppCompat.ActionButton">
     <item name="android:layout_width">match_parent</item>
     <item name="android:layout_height">@dimen/com_auth0_primary_button_height</item>
     <item name="android:textColor">#ffffff</item>
-    <item name="android:background">#39babd</item>
+    <item name="android:background">#4d4d4d</item>
     <item name="android:textSize">@dimen/com_auth0_primary_button_text_size</item>
   </style>
 
@@ -48,14 +48,14 @@
   </style>
 
   <style name="AppTheme.Lock.Theme.CredentialBox">
-    <item name="android:textColor">#ffffff</item>
+    <item name="android:textColor">#c0b38e</item>
   </style>
 
   <style name="AppTheme.Lock.Theme.CredentialField" parent="Widget.AppCompat.EditText">
     <item name="android:layout_width">match_parent</item>
     <item name="android:layout_height">@dimen/com_auth0_credential_field_height</item>
     <item name="android:textSize">@dimen/com_auth0_credential_field_font_size</item>
-    <item name="android:textColorHint">#ffffff</item>
+    <item name="android:textColorHint">#c0b38e</item>
     <item name="android:paddingLeft">@dimen/com_auth0_credential_field_padding</item>
     <item name="android:paddingRight">@dimen/com_auth0_credential_field_padding</item>
     <item name="android:paddingBottom">@dimen/com_auth0_credential_field_vertical_padding</item>
@@ -66,26 +66,26 @@
   </style>
 
   <style name="AppTheme.Lock.Theme.CredentialField.Email" parent="AppTheme.Lock.Theme.CredentialField">
-    <item name="android:textColor">#ffffff</item>
+    <item name="android:textColor">#c0b38e</item>
     <item name="com_auth0_normalIconDrawable">@drawable/com_auth0_ic_email</item>
     <item name="com_auth0_errorIconDrawable">@drawable/com_auth0_ic_email_error</item>
   </style>
 
   <style name="AppTheme.Lock.Theme.CredentialField.Password" parent="AppTheme.Lock.Theme.CredentialField">
-    <item name="android:textColor">#ffffff</item>
+    <item name="android:textColor">#c0b38e</item>
     <item name="com_auth0_normalIconDrawable">@drawable/com_auth0_ic_lock</item>
     <item name="com_auth0_errorIconDrawable">@drawable/com_auth0_ic_lock_error</item>
   </style>
 
   <style name="AppTheme.Lock.Theme.CredentialField.Username" parent="AppTheme.Lock.Theme.CredentialField">
-    <item name="android:textColor">#ffffff</item>
+    <item name="android:textColor">#c0b38e</item>
     <item name="com_auth0_normalIconDrawable">@drawable/com_auth0_ic_person</item>
     <item name="com_auth0_errorIconDrawable">@drawable/com_auth0_ic_person_error</item>
   </style>
 
   <style name="AppTheme.Lock.Theme.Message" parent="TextAppearance.AppCompat.Small">
      <item name="android:layout_marginBottom">@dimen/com_auth0_lock_vertical_margin</item>
-     <item name="android:textColor">#ffffff</item>
+     <item name="android:textColor">#c0b38e</item>
   </style>
 
 </resources>
